--- a/index.html
+++ b/index.html
@@ -33,249 +33,126 @@
     <meta property="og:video:type" content="video/mp4">
     <meta property="og:video:width" content="1920">
     <meta property="og:video:height" content="1080">
-    <meta property="og:video:alt" content="Footage showing a ZeroG Mercury One.1 with a Hydra bed leveling system at Midwest RepRap Festival 2022.">
+    <meta property="og:video:alt"
+        content="Footage showing a ZeroG Mercury One.1 with a Hydra bed leveling system at Midwest RepRap Festival 2022.">
 
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <!-- BS Icons replaces non-free FontAwesome -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
     <style>
-        #myVideo {
+        body {
+            width: 100;
+            height: 100%
+        }
+
+        #pageBackgroundVideo {
             position: fixed;
             right: 0;
             bottom: 0;
             min-width: 100%;
             min-height: 100%;
+            z-index: -10;
+            /*Puts video behind the entire page*/
+        }
+
+        #mainNav {
+            background-color: rgba(240, 240, 240, 0.969);
+            box-shadow: 1px -4px 11px 6px rgba(69, 69, 69, 0.69);
+            -webkit-box-shadow: 1px -4px 11px 6px rgba(69, 69, 69, 0.69);
+            -moz-box-shadow: 1px -4px 11px 6px rgba(69, 69, 69, 0.69);
+        }
+
+        #mainNav .navbar-brand {
+            background: url("assets/img/Logo.png") center / contain no-repeat;
+            padding: 26px;
+        }
+
+        #mainNav .navbar-nav .nav-item .nav-link {
+            color: #343a40;
+            font-size: initial;
+        }
+
+        #mainNav .navbar-nav .nav-item .nav-link.active,
+        #mainNav .navbar-nav .nav-item .nav-link:hover {
+            color: #e34234;
+        }
+
+        @media (min-width: 992px) {
+            #mainNav {
+                padding-top: 22px;
+                padding-bottom: 22px;
+                border: none;
+            }
+        }
+
+        @media (min-width: 768px) {
+            header.masthead .intro-text .intro-lead-in {
+                font-size: 22px;
+            }
+        }
+        header.masthead .intro-text {
+                padding-bottom:0;
+            }
+
+        header.masthead .btn-group>a.btn {
+            background-color: rgba(42.69, 42.69, 42.69, 0.420);
+            padding: 12px 24px;
+            border: none;
+        }
+
+        header.masthead .btn-group {
+            border: none;
         }
     </style>
 </head>
 
-<body id="page-top" style="width: 100%;height: 100%;">
+<body>
 
-    <video autoplay muted loop id="myVideo">
+    <video autoplay muted loop id="pageBackgroundVideo">
         <source src="assets/img/background.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
     </video>
-    
-    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-light" id="mainNav">
-        <div class="container-fluid"><a class="navbar-brand" href="#page-top"
-                style="background: url(&quot;assets/img/Logo.png&quot;) center / contain no-repeat;padding: 26px;"></a><button
-                data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right"
+
+    <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#page-top"></a>
+            <button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right"
                 type="button" data-toogle="collapse" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation" style="background: rgb(255,0,0);"><i class="fa fa-bars"></i></button>
+                aria-label="Toggle navigation" style="background: red"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto text-uppercase" style="border-style: none;">
-                    <li class="nav-item"><a class="nav-link text-dark js-scroll-trigger" href="https://docs.zerog.one/"
-                            style="color: rgb(255,255,255);border-color: rgb(255,255,255);">Docs</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark js-scroll-trigger" href="https://discord.gg/zerog"
-                            style="color: rgb(255,255,255);border-style: none;border-color: rgb(255,255,255);">Discord</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link text-muted js-scroll-trigger" href="https://ko-fi.com/zerog"
-                            style="color: #ffffff;">Buy me a Ko-fi</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://docs.zerog.one/">Docs</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://discord.gg/zerog"><i
+                                class="bi bi-discord"></i> Discord</a></li>
+                    <li class="nav-item"><a class="nav-link text-muted" href="https://ko-fi.com/zerog">Buy me a
+                            Ko-fi</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <header class="masthead"
-        style="width: 100%;height: 100%;filter: brightness(100%); no-repeat;background-size: cover;">
-        <div class="container" style="height: 100%;">
-            <div class="intro-text" style="height: 100%;">
-                <div class="intro-heading text-uppercase" style="margin: 0px;"><span
-                        style="text-shadow: 0px 0px 5px rgb(0,0,0);">Mercury One.1 & Hydra</span></div>
-                <div class="intro-lead-in" style="margin: 0px;"><span
-                        style="font-size: 20px;text-shadow: 0px 0px 5px rgb(0,0,0);padding: 11px;">Ender 5 compatible,
-                        Voron Inspired</span></div>
-                <div class="intro-lead-in" style="margin: 0px;margin-top: 23px;">
-                    <div class="btn-group" role="group"><a class="btn btn-dark" role="button"
-                            data-bs-hover-animate="pulse" href="https://docs.zerog.one/">Docs</a>
-                        <a class="btn btn-dark" role="button" data-bs-hover-animate="pulse"
-                            href="https://docs.zerog.one/manual/build/mercury_eva">BOM</a><a class="btn btn-dark"
-                            role="button" data-bs-hover-animate="pulse" href="https://discord.gg/zerog">Discord</a>
-                    </div>
+    <header class="masthead my-auto">
+        <div class="container-fluid">
+            <div class="intro-text">
+                <div class="intro-heading text-uppercase my-2 my-md-3">
+                    <span style="text-shadow: 0 0 5px black">Mercury One.1 & Hydra</span>
+                </div>
+                <div class="intro-lead-in my-2 my-md-3">
+                    <span style="text-shadow: 0 0 5px black">Ender-5 compatible, Voron Inspired</span>
+                </div>
+                <div class="btn-group btn-group-lg my-0 my-md-5" role="group">
+                    <a class="btn btn-dark bg-50%" role="button" data-bs-hover-animate="pulse"
+                        href="https://docs.zerog.one/">Docs</a>
+                    <a class="btn btn-dark" role="button" data-bs-hover-animate="pulse"
+                        href="https://docs.zerog.one/manual/build/mercury_eva">BOM</a>
+                    <a class="btn btn-dark" role="button" data-bs-hover-animate="pulse"
+                        href="https://discord.gg/zerog">Discord</a>
                 </div>
             </div>
         </div>
     </header>
-
-    <div class="modal fade portfolio-modal text-center" role="dialog" tabindex="-1" id="portfolioModal1">
-        <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8 mx-auto">
-                                <div class="modal-body">
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p><img
-                                        class="img-fluid d-block mx-auto" src="assets/img/portfolio/1-full.jpg">
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur
-                                        adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos
-                                        deserunt repellat aperiam quasi sunt officia expedita beatae
-                                        cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-unstyled">
-                                        <li>Date: January 2017</li>
-                                        <li>Client: Threads</li>
-                                        <li>Category: Illustration</li>
-                                    </ul><button class="btn btn-primary" data-dismiss="modal" type="button"><i
-                                            class="fa fa-times"></i><span>&nbsp;Close Project</span></button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade portfolio-modal text-center" role="dialog" tabindex="-1" id="portfolioModal2">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8 mx-auto">
-                                <div class="modal-body">
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p><img
-                                        class="img-fluid d-block mx-auto" src="assets/img/portfolio/2-full.jpg">
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur
-                                        adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos
-                                        deserunt repellat aperiam quasi sunt officia expedita beatae
-                                        cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-unstyled">
-                                        <li>Date: January 2017</li>
-                                        <li>Client: Threads</li>
-                                        <li>Category: Illustration</li>
-                                    </ul><button class="btn btn-primary" data-dismiss="modal" type="button"><i
-                                            class="fa fa-times"></i><span>&nbsp;Close Project</span></button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade portfolio-modal text-center" role="dialog" tabindex="-1" id="portfolioModal3">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8 mx-auto">
-                                <div class="modal-body">
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p><img
-                                        class="img-fluid d-block mx-auto" src="assets/img/portfolio/3-full.jpg">
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur
-                                        adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos
-                                        deserunt repellat aperiam quasi sunt officia expedita beatae
-                                        cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-unstyled">
-                                        <li>Date: January 2017</li>
-                                        <li>Client: Threads</li>
-                                        <li>Category: Illustration</li>
-                                    </ul><button class="btn btn-primary" data-dismiss="modal" type="button"><i
-                                            class="fa fa-times"></i><span>&nbsp;Close Project</span></button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade portfolio-modal text-center" role="dialog" tabindex="-1" id="portfolioModal4">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8 mx-auto">
-                                <div class="modal-body">
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p><img
-                                        class="img-fluid d-block mx-auto" src="assets/img/portfolio/4-full.jpg">
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur
-                                        adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos
-                                        deserunt repellat aperiam quasi sunt officia expedita beatae
-                                        cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-unstyled">
-                                        <li>Date: January 2017</li>
-                                        <li>Client: Threads</li>
-                                        <li>Category: Illustration</li>
-                                    </ul><button class="btn btn-primary" data-dismiss="modal" type="button"><i
-                                            class="fa fa-times"></i><span>&nbsp;Close Project</span></button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade portfolio-modal text-center" role="dialog" tabindex="-1" id="portfolioModal5">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8 mx-auto">
-                                <div class="modal-body">
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p><img
-                                        class="img-fluid d-block mx-auto" src="assets/img/portfolio/5-full.jpg">
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur
-                                        adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos
-                                        deserunt repellat aperiam quasi sunt officia expedita beatae
-                                        cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-unstyled">
-                                        <li>Date: January 2017</li>
-                                        <li>Client: Threads</li>
-                                        <li>Category: Illustration</li>
-                                    </ul><button class="btn btn-primary" data-dismiss="modal" type="button"><i
-                                            class="fa fa-times"></i><span>&nbsp;Close Project</span></button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade portfolio-modal text-center" role="dialog" tabindex="-1" id="portfolioModal6">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8 mx-auto">
-                                <div class="modal-body">
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p><img
-                                        class="img-fluid d-block mx-auto" src="assets/img/portfolio/6-full.jpg">
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur
-                                        adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos
-                                        deserunt repellat aperiam quasi sunt officia expedita beatae
-                                        cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-unstyled">
-                                        <li>Date: January 2017</li>
-                                        <li>Client: Threads</li>
-                                        <li>Category: Illustration</li>
-                                    </ul><button class="btn btn-primary" data-dismiss="modal" type="button"><i
-                                            class="fa fa-times"></i><span>&nbsp;Close Project</span></button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="assets/js/script.min.js"></script>
 
 </body>
 
