Navbar hamburger icon

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <a class="navbar-brand" href="#page-top"></a>
             <button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right"
                 type="button" data-toogle="collapse" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation" style="background: red"><i class="fa fa-bars"></i></button>
+                aria-label="Toggle navigation" style="background: red"><i class="bi bi-list"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto text-uppercase" style="border-style: none;">
                     <li class="nav-item"><a class="nav-link" href="https://docs.zerog.one/">Docs</a></li>
