--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
                 font-size: 22px;
             }
         }
+
         header.masthead .intro-text {
-                padding-bottom:0;
-            }
+            padding-bottom: 0;
+        }
 
         header.masthead .btn-group>a.btn {
             background-color: rgba(42.69, 42.69, 42.69, 0.420);
@@ -153,7 +154,13 @@
             </div>
         </div>
     </header>
-
+    <!-- jQuery and Bootstrap 4.6.x Bundle (includes Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
